# Non-Stop

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
nonstop/: main.py  sessions.py  updater.py
nonstop/board/: __init__.py
nonstop/bus/: __init__.py
nonstop/cli/: __init__.py  commands.py  repl.py
nonstop/personalities/: __init__.py
nonstop/projects/: __init__.py  manager.py
nonstop/providers/: __init__.py  openrouter.py
nonstop/runtime/: __init__.py  agent.py  memory.py  orchestrator.py  supervisor.py  teams.py
